--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,9 +1,9 @@
 What's new?
 ===========
 
-Version 0.1.0
--------------
+Version 0.1.0-testing1
+----------------------
 
-Released: Not yet released
+Released: Jul. 2, 2014
 
-- First release of Terminal Overload
+- First testing release of Terminal Overload
