--- a/My Projects/main/game/README
+++ b/My Projects/main/game/README
@@ -1,10 +1,13 @@
 Terminal Overload is a free and open-source multiplayer FPS game.
 
-This is version 0.0.0+dev of the game, so don't expect anything yet.
-
 Visit http://terminal-overload.org for more information.
+
+This is a very early testing version of the game, so don't expect anything yet.
+Beware of bugs, incompleteness and general crappyness.
+
 
 Known Issues
 ------------
 
-- ...
+- No known issues yet
+
