--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,21 +1,9 @@
 What's new?
 ===========
 
-Version 0.1.0-testing2
-----------------------
+Version 0.1.0
+-------------
 
-Released: Jul. 28, 2014
+Released: Aug. 1, 2014
 
-- Add optional player authentication.
-- Add grenades.
-- ImpShield: Behave like the anchor in ROTC p.5.4.
-- Add 25 point damage buffer to Sniper CAT.
-- Various improvements and bugfixes
-
-
-Version 0.1.0-testing1
-----------------------
-
-Released: Jul. 2, 2014
-
-- First testing release of Terminal Overload
+- First public release of Terminal Overload
