--- a/My Projects/main/game/README
+++ b/My Projects/main/game/README
@@ -2,5 +2,5 @@ Terminal Overload is a free and open-source multiplayer FPS game.
 
 Visit http://terminal-overload.org for more information.
 
-This is a very early testing version of the game, so don't expect anything yet.
-Beware of bugs, incompleteness and general crappyness.
+This is still a very early version of the game, so don't expect anything yet.
+Beware of bugs, incompleteness and general crappiness. 
