Update NEWS file.

--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,6 +1,14 @@
 What's new?
 ===========
 
+Version 0.2.0-testing3
+----------------------
+
+Release Date: Sep. 6, 2014
+
+- Bugfixes 
+
+
 Version 0.2.0-testing2
 ----------------------
 
@@ -11,7 +19,6 @@ Release Date: Sep. 5, 2014
 - Very basic in-game menu
 - Tweaked interceptor disc visuals
 - Bugfixes 
-
 
 
 Version 0.2.0-testing1
