--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,6 +1,19 @@
 What's new?
 ===========
 
+Version 0.3.0-testing3
+----------------------
+
+Release Date: Oct. 5, 2014
+
+- Improved responsiveness of mouse look while in CAT form.
+- Tweaked CAT movement.
+- Loadout class #1 with razor discs instead of repel and explosive discs.
+- Removed Etherboard from class #4 (Minigunner) loadout.
+- Various minor tweaks and improvements
+- Bugfixes
+
+
 Version 0.3.0-testing2
 ----------------------
 
