--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,6 +1,20 @@
 What's new?
 ===========
 
+Version 0.5.0-testing1
+----------------------
+
+Release Date: Nov. 8, 2014
+
+- Add primitive Team Elimination game mode + a simple map for use with it.
+- Contact with water destroys CATs.
+- Use "/tmp/" prefix instead of "[P]" for unauthenticated players.
+- Primitive in-game player list.
+- Try new sound for x-jump.
+- Various tweaks and improvements
+- Bugfixes
+
+
 Version 0.4.0
 -------------
 
