--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,6 +1,18 @@
 What's new?
 ===========
 
+Version 0.5.0-testing3
+----------------------
+
+Release Date: Nov. 18, 2014
+
+- Use map's team colors in team elimination mode.
+- Change default player name to "user".
+- Work on TE1 map.
+- Various tweaks and improvements
+- Bugfixes
+
+
 Version 0.5.0-testing2
 ----------------------
 
