Update NEWS file.

--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,6 +1,17 @@
 What's new?
 ===========
 
+Version 0.6.0-testing2
+----------------------
+
+Release Date: Jan. 30, 2015
+
+- Make carrying a flag supercharge a CAT's impulse damper recharge rate.
+- Improve loading screen.
+- Various tweaks and improvements
+- Bugfixes
+
+
 Version 0.6.0-testing1
 ----------------------
 
