Update game version to 0.7.0-dev2.

--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,6 +1,19 @@
 What's new?
 ===========
 
+Version 0.7.0-dev2
+------------------
+
+Release Date: Apr. 16, 2015
+
+- Improved CAT sniper feed
+- Slightly improved CAT HUD
+- New 1st person models for RFL1, SMG3, SMG4 and SG3
+- New visuals for grenades
+- Various tweaks and improvements
+- Bugfixes
+
+
 Version 0.7.0-dev1
 ------------------
 
