Update NEWS file.

--- a/My Projects/main/game/NEWS
+++ b/My Projects/main/game/NEWS
@@ -1,35 +1,21 @@
 What's new?
 ===========
 
-Version 0.7.0-dev2
-------------------
+Version 0.7.0
+-------------
 
-Release Date: Apr. 16, 2015
+Release Date: May 26, 2015
 
-- Improved CAT sniper feed
-- Slightly improved CAT HUD
-- New 1st person models for RFL1, SMG3, SMG4 and SG3
-- New visuals for grenades
-- Various tweaks and improvements
-- Bugfixes
-
-
-Version 0.7.0-dev1
-------------------
-
-Release Date: Mar. 11, 2015
-
-- HUD changes and new specialized "Sniping View" for CATs (default key: f)
-- CATs now lose any flags they're carrying if they get hit by a repel disc.
-- Terminology changes:
-  - Damage Buffer -> Shield
-  - Damage Damper -> Damage Protection
-  - Impulse Damper -> Knockback Protection
-- Try to make default game more accessible:
+- HUD changes and new specialized "sniping feed" for CATs (default key: f)
+- Try to make game more accessible:
+  - Terminology changes:
+    - Damage Buffer -> Shield
+    - Damage Damper -> Damage Protection
+    - Impulse Damper -> Knockback Protection
   - Disable friendly fire.
   - Don't restore shooter's health when damaging enemies.
   - Damage and knockback protection always at maximum level
-  - Reduce Standard CAT health to 50 but increase shield to 50.
+  - Reduce Standard CAT health to 50.
   - CAT's armor now reflects its shield level.
   - Improved hit notifications
 - Add mutators:
@@ -38,6 +24,8 @@ Release Date: Mar. 11, 2015
   - Advanced Movement: Using etherboard or x-jump reduces knockback protection.
   - V-AMP: Damaging enemies restores health.
   - Advanced: Combination of Advanced Shooting, Advanced Movement and V-AMP
+- CATs now lose any flags they're carrying if they get hit by a repel disc.  
+- New 1st person models for RFL1, SMG3, SMG4 and SG3
 - Weapon changes:
   - RFL1: Reduce recoil.
   - SMG3: Reduce damage.
